	- updated the dll file to a16
	- added prisoner take blood acceptance to designator, removed the multiple billstack check (couldn't get it to work)
	- added own recipe class to make take blood always sucessfull, the medicine 5 skillrequirement is still there. so should be okay

- 05/06/2017

	- update to a17

- 06/06/2017

	- code updates to changes in core code in a17
	- added sellprice factor to buildingbase

- 09/06/2017

	- changed deteoration from 10 to 4 (similar other vanilla natural bodyparts)
	- updated the thingdef_item xmls for base (added ticker never) and blood (natural bodypart,haulable,tradetag)

- 10/06/2017

	- added ingredient medicine to bloodtakerecipe
	- added url to forum topic in about file

- 13/06/2017

	- added bloodtake designator over patchoperations to order menue to fix a conflict wiht the mod stuffed floors

- 29/12/2017

	- update to b18
	- code update for recipe, bill missing, added sound for designator, sicne message and sound were split in b18
	- added disease severity to abstract for hediff disease
	- made extra reseach tab, since mod adds 5 projects
	- <Defs> for others stuff like researchprojectdefs
	- fixed case sensitive xml tags
	- added <prioritizeSustains>true</prioritizeSustains> to workgiver for make medicine
	- removed ignore needs power xml tag
	- added adv components to stuff:
		all medical stuff= 20 comp to 5 comp and 4 adv comp
		plasma geo same as above
		big plasma= 30 to 10 and for 20 comp same as above
		small plasma= 3 comp to 1 adv (didnt wanted to make more then 4 res to build and only 21 wealth incr)
	- recipe nano medicine ingredients, replaced 4 components with 1 adv component 
	
- 07/01/2018

	- updated about file with a bit more info
	- added patchoption find mod
	- added patches to main mods, currently includes:
		vanilla beds, goodnight, medicaddons, [t]morebeds(both versions), RIMkea, more furniture

- 20/01/2018

	- added modsync file