@@ -36,8 +36,8 @@
     <costList>
       <Steel>100</Steel>
       <Plasteel>50</Plasteel>
-      <Component>5</Component>
-	  <AdvancedComponent>4</AdvancedComponent>
+      <ComponentIndustrial>5</ComponentIndustrial>
+	  <ComponentSpacer>4</ComponentSpacer>
     </costList>
     <interactionCellOffset>(0,0,2)</interactionCellOffset>
     <hasInteractionCell>true</hasInteractionCell>
@@ -51,14 +51,17 @@
     <comps>
       <li Class="CompProperties_Power">
         <compClass>CompPowerTrader</compClass>
-        <startElectricalFires>true</startElectricalFires>
+        <shortCircuitInRain>true</shortCircuitInRain>
         <basePowerConsumption>250</basePowerConsumption>
-        <soundPowerOn>PowerOnSmall</soundPowerOn>
-        <soundPowerOff>PowerOffSmall</soundPowerOff>
+        <soundPowerOn>Power_OnSmall</soundPowerOn>
+        <soundPowerOff>Power_OffSmall</soundPowerOff>
       </li>
       <li Class="CompProperties_Flickable"/>
     </comps>
-	<minifiedDef>MinifiedFurniture</minifiedDef>
+	<minifiedDef>MinifiedThing</minifiedDef>
+    <thingCategories>
+      <li>BuildingsFurniture</li>
+    </thingCategories>
   </ThingDef>
 
   <!--================================= adv vitals monitor =================================-->
@@ -87,20 +90,19 @@
 	  <Mass>30</Mass>
       <Flammability>1.0</Flammability>
     </statBases>
-    <description> Very Increases patients treatment quality. Needs to be placed adjacent to a Hi-tech medical bed. One Hi-tech medical bed can be linked to only one Advanced vitals monitor.</description>
+    <description>Very Increases patients treatment quality. Needs to be placed adjacent to a Hi-tech medical bed. One Hi-tech medical bed can be linked to only one Advanced vitals monitor.</description>
     <size>(1,1)</size>
     <costList>
       <Steel>50</Steel>
       <Plasteel>20</Plasteel>
-      <Component>5</Component>
-	  <AdvancedComponent>4</AdvancedComponent>
+      <ComponentIndustrial>5</ComponentIndustrial>
+	  <ComponentSpacer>4</ComponentSpacer>
     </costList>
     <designationCategory>Misc</designationCategory>
-    <minifiedDef>MinifiedFurniture</minifiedDef>
     <comps>
       <li Class="CompProperties_Power">
         <compClass>CompPowerTrader</compClass>
-        <startElectricalFires>true</startElectricalFires>
+        <shortCircuitInRain>true</shortCircuitInRain>
         <basePowerConsumption>200</basePowerConsumption>
       </li>
       <li Class="CompProperties_Flickable"/>
@@ -155,8 +157,8 @@
     </stuffCategories>
     <costStuffCount>40</costStuffCount>
     <costList>
-      <Component>5</Component>
-	  <AdvancedComponent>4</AdvancedComponent>
+      <ComponentIndustrial>5</ComponentIndustrial>
+	  <ComponentSpacer>4</ComponentSpacer>
       <CTSNanoTechMedicine>5</CTSNanoTechMedicine>
     </costList>
     <building>
