@@ -33,8 +33,8 @@
     <costList>
 		<Steel>200</Steel>
 		<Plasteel>30</Plasteel>
-		<Component>5</Component>
-		<AdvancedComponent>4</AdvancedComponent>
+		<ComponentIndustrial>5</ComponentIndustrial>
+		<ComponentSpacer>4</ComponentSpacer>
     </costList>
     <comps>
       <li Class="CompProperties_Power">
@@ -78,7 +78,10 @@
     <researchPrerequisites>
       <li>CTSPlasma_Geo_Plant</li>
     </researchPrerequisites>
-	<minifiedDef>MinifiedFurniture</minifiedDef>
+	<minifiedDef>MinifiedThing</minifiedDef>
+    <thingCategories>
+      <li>BuildingsPower</li>
+    </thingCategories>
   </ThingDef>
   
 </Defs>
