@@ -15,10 +15,12 @@
     <soundInteract>Standard_Drop</soundInteract>
     <soundDrop>Standard_Drop</soundDrop>
     <statBases>
-      <MaxHitPoints>100</MaxHitPoints>
-      <MarketValue>5</MarketValue>
-      <Flammability>1.0</Flammability>
-      <MedicalPotency>0.5</MedicalPotency>     
+		<Mass>0.25</Mass>
+		<MaxHitPoints>100</MaxHitPoints>
+		<MarketValue>5</MarketValue>
+		<Flammability>1.0</Flammability>
+		<MedicalPotency>0.5</MedicalPotency> 
+		<MedicalQualityMax>0.60</MedicalQualityMax>
     </statBases>
     <thingCategories>
       <li>Medicine</li>
@@ -44,6 +46,7 @@
 		<Mass>0.5</Mass>
 		<Flammability>1.0</Flammability>
 		<MedicalPotency>3.6</MedicalPotency>
+		<MedicalQualityMax>3.30</MedicalQualityMax>
     </statBases>
     <thingCategories>
       <li>Medicine</li>
