@@ -12,6 +12,9 @@
     <selectable>true</selectable>
     <altitudeLayer>Item</altitudeLayer>
     <stackLimit>75</stackLimit>
+	<statBases>
+      <Beauty>-4</Beauty>
+    </statBases>
     <comps>
       <li Class="CompProperties_Forbiddable"/>
     </comps>
