@@ -7,7 +7,7 @@
 		<success>Always</success>
 		<operations>
 			<li Class="CTS.PatchOperationFindMod">
-				<modName>More Furniture [B18]</modName>
+				<modName>More Furniture [1.0]</modName>
 			</li>
 			<li Class="PatchOperationAdd">
 		<xpath>*/ThingDef[@Name = "CTSAdvHospitalBedBase"]/comps/li[@Class = "CompProperties_AffectedByFacilities"]/linkableFacilities</xpath>
